# Event-Lens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: FAISS_SMOKE_TEST.md  MONGO_SMOKE_TEST.md  REDIS_SMOKE_TEST.md  STATUS.md
event_lens/: __init__.py  bus.py  cli.py  config.py  events.py  factory.py
event_lens/messaging/: __init__.py  bus.py  redis_bus.py
event_lens/schemas/: __init__.py  events.py  messages.py  topics.py
event_lens/services/: __init__.py  document_db.py  embedding.py  inference.py  pipeline.py  vector_index.py
tests/: test_cli_and_openai.py  test_events.py  test_faiss_smoke.py  test_message_contracts.py  test_mongo_integration.py  test_pipeline_system.py  test_redis_integration.py  test_services.py
